--- a/FullStack/Cinema/client/src/components/UI/navigateBar/webContentNavigationBar.module.css
+++ b/FullStack/Cinema/client/src/components/UI/navigateBar/webContentNavigationBar.module.css
@@ -1,3 +1,8 @@
+.web_content_nav_container {
+    position: sticky;
+    top: 4rem;
+}
+
 .ul {
     list-style: none;
     padding: 10px;
