--- a/FullStack/Cinema/client/src/components/pages/employees/allEmployees.module.css
+++ b/FullStack/Cinema/client/src/components/pages/employees/allEmployees.module.css
@@ -1,5 +1,5 @@
 .all_emp_container {
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
+    align-items: center;
 }
